css: stop stretching the canvas!

--- a/web/css/9wd.css
+++ b/web/css/9wd.css
@@ -11,8 +11,6 @@
 	border-width: medium;
 	border-style: solid;
 	border-color: #9cefef;
-	width: 800px;
-	height: 600px;
 }
 
 #cursor {
